Fix the text alignment on moblie

--- a/style.css
+++ b/style.css
@@ -245,11 +245,19 @@ body {
         width: 80vw;
     }
 
-    .title-container {
-    }
-
     .names-wrapper {
         flex-direction: column;
+    }
+
+    .title {
+        justify-content: center;
+        font-size: 28px;
+        text-align: center; 
+    }
+    
+    .subtitle {
+        font-size: 16px;
+        text-align: center; 
     }
 
     .first-name input {
